# physics-homework

./: .gitignore  pyproject.toml  res.csv
src/: grid_search.py  physics.ipynb  plot.py  shared.py
